# my-family-bot

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  Dockerfile.frontend  Dockerfile.frontend.dockerignore  README.md  deploy.sh  docker-compose.yml  pyproject.toml
backend/: Dockerfile
backend/app/: config.py  main.py
backend/app/agents/: cypher_generator.py  language_detector.py  orchestrator.py  response_formatter.py
backend/app/channels/: adapter.py  twilio_webhook.py
backend/app/db/: gedcom_importer.py  neo4j_client.py
backend/app/models/: schemas.py
backend/app/routers/: admin.py  chat.py  whatsapp.py
backend/tests/: test_agents.py
frontend/: index.html  nginx.conf  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: ChatInterface.tsx
frontend/src/pages/: Admin.tsx  Chat.tsx  Login.tsx
neo4j/init/: schema.cypher
